// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateInput renders a button that triggers the calendar 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hSiATR"
>
  <div
    class="ThemeProvider__AppWrapper-sc-1qc9t9l-0 bLmXgB"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 erPdoW FormField__FormFieldBox-m9hood-0 gWgpjB"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 gcjayZ FormField__FormFieldContentBox-m9hood-1"
      >
        <button
          aria-label="Open Drop"
          class="StyledButton-sc-323bzc-0 ffRano"
          id="dob"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 bbjiaZ"
          >
            <svg
              aria-label="Calendar"
              class="StyledIcon-ofa7kd-0 jaReTX"
              viewBox="0 0 24 24"
            >
              <path
                d="M2,5 L22,5 L22,22 L2,22 L2,5 Z M18,5 L18,1 M6,5 L6,1 M2,10 L22,10"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
            <div
              class="StyledBox__StyledBoxGap-sc-13pk1d4-1 injAPQ"
            />
            Pick a date and call me Jim
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DateInput renders a disabled input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hSiATR"
>
  <div
    class="ThemeProvider__AppWrapper-sc-1qc9t9l-0 bLmXgB"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 erPdoW FormField__FormFieldBox-m9hood-0 gWgpjB"
    >
      <label
        class="StyledText-sc-1sadyjn-0 weZKr"
        for="dob"
      >
        Date of birth
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 jxtDLa FormField__FormFieldContentBox-m9hood-1"
      >
        <div
          class="StyledMaskedInput__StyledMaskedInputContainer-sc-99vkfa-1 jMpcQp"
        >
          <div
            class="StyledMaskedInput__StyledIcon-sc-99vkfa-2 bpNQXb"
          >
            <svg
              aria-label="Calendar"
              class="StyledIcon-ofa7kd-0 fpngbb"
              viewBox="0 0 24 24"
            >
              <path
                d="M2,5 L22,5 L22,22 L2,22 L2,5 Z M18,5 L18,1 M6,5 L6,1 M2,10 L22,10"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </div>
          <input
            autocomplete="off"
            class="StyledMaskedInput-sc-99vkfa-0 hsHiVz"
            disabled=""
            id="dob"
            placeholder="yyyy-mm-dd"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DateInput renders a simple input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hSiATR"
>
  <div
    class="ThemeProvider__AppWrapper-sc-1qc9t9l-0 bLmXgB"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 erPdoW FormField__FormFieldBox-m9hood-0 gWgpjB"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 gcjayZ FormField__FormFieldContentBox-m9hood-1"
      >
        <div
          class="StyledMaskedInput__StyledMaskedInputContainer-sc-99vkfa-1 jMpcQp"
        >
          <div
            class="StyledMaskedInput__StyledIcon-sc-99vkfa-2 bpNQXb"
          >
            <svg
              aria-label="Calendar"
              class="StyledIcon-ofa7kd-0 jaReTX"
              viewBox="0 0 24 24"
            >
              <path
                d="M2,5 L22,5 L22,22 L2,22 L2,5 Z M18,5 L18,1 M6,5 L6,1 M2,10 L22,10"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </div>
          <input
            autocomplete="off"
            class="StyledMaskedInput-sc-99vkfa-0 cLTyQO"
            placeholder="yyyy-mm-dd"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DateInput renders an input with a help message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hSiATR"
>
  <div
    class="ThemeProvider__AppWrapper-sc-1qc9t9l-0 bLmXgB"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 erPdoW FormField__FormFieldBox-m9hood-0 gWgpjB"
    >
      <label
        class="StyledText-sc-1sadyjn-0 weZKr"
        for="dob"
      >
        Date of birth
      </label>
      <span
        class="StyledText-sc-1sadyjn-0 hosPKv"
      >
        This is a very cool input
      </span>
      <div
        class="StyledBox-sc-13pk1d4-0 gcjayZ FormField__FormFieldContentBox-m9hood-1"
      >
        <div
          class="StyledMaskedInput__StyledMaskedInputContainer-sc-99vkfa-1 jMpcQp"
        >
          <div
            class="StyledMaskedInput__StyledIcon-sc-99vkfa-2 bpNQXb"
          >
            <svg
              aria-label="Calendar"
              class="StyledIcon-ofa7kd-0 jaReTX"
              viewBox="0 0 24 24"
            >
              <path
                d="M2,5 L22,5 L22,22 L2,22 L2,5 Z M18,5 L18,1 M6,5 L6,1 M2,10 L22,10"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </div>
          <input
            autocomplete="off"
            class="StyledMaskedInput-sc-99vkfa-0 cLTyQO"
            id="dob"
            placeholder="yyyy-mm-dd"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DateInput renders an input with a label 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hSiATR"
>
  <div
    class="ThemeProvider__AppWrapper-sc-1qc9t9l-0 bLmXgB"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 erPdoW FormField__FormFieldBox-m9hood-0 gWgpjB"
    >
      <label
        class="StyledText-sc-1sadyjn-0 weZKr"
        for="dob"
      >
        Date of birth
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 gcjayZ FormField__FormFieldContentBox-m9hood-1"
      >
        <div
          class="StyledMaskedInput__StyledMaskedInputContainer-sc-99vkfa-1 jMpcQp"
        >
          <div
            class="StyledMaskedInput__StyledIcon-sc-99vkfa-2 bpNQXb"
          >
            <svg
              aria-label="Calendar"
              class="StyledIcon-ofa7kd-0 jaReTX"
              viewBox="0 0 24 24"
            >
              <path
                d="M2,5 L22,5 L22,22 L2,22 L2,5 Z M18,5 L18,1 M6,5 L6,1 M2,10 L22,10"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </div>
          <input
            autocomplete="off"
            class="StyledMaskedInput-sc-99vkfa-0 cLTyQO"
            id="dob"
            placeholder="yyyy-mm-dd"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DateInput renders an input with a validation error 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hSiATR"
>
  <div
    class="ThemeProvider__AppWrapper-sc-1qc9t9l-0 bLmXgB"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 erPdoW FormField__FormFieldBox-m9hood-0 gWgpjB"
    >
      <label
        class="StyledText-sc-1sadyjn-0 weZKr"
        for="dob"
      >
        Date of birth
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 iBOdjp FormField__FormFieldContentBox-m9hood-1"
      >
        <div
          class="StyledMaskedInput__StyledMaskedInputContainer-sc-99vkfa-1 jMpcQp"
        >
          <div
            class="StyledMaskedInput__StyledIcon-sc-99vkfa-2 bpNQXb"
          >
            <svg
              aria-label="Calendar"
              class="StyledIcon-ofa7kd-0 jaReTX"
              viewBox="0 0 24 24"
            >
              <path
                d="M2,5 L22,5 L22,22 L2,22 L2,5 Z M18,5 L18,1 M6,5 L6,1 M2,10 L22,10"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </div>
          <input
            autocomplete="off"
            class="StyledMaskedInput-sc-99vkfa-0 cLTyQO"
            id="dob"
            placeholder="yyyy-mm-dd"
            value=""
          />
        </div>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 bPwDLh"
      >
        You failed at this
      </span>
    </div>
  </div>
</div>
`;

exports[`DateInput renders an input with an info message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hSiATR"
>
  <div
    class="ThemeProvider__AppWrapper-sc-1qc9t9l-0 bLmXgB"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 erPdoW FormField__FormFieldBox-m9hood-0 gWgpjB"
    >
      <label
        class="StyledText-sc-1sadyjn-0 weZKr"
        for="dob"
      >
        Date of birth
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 gcjayZ FormField__FormFieldContentBox-m9hood-1"
      >
        <div
          class="StyledMaskedInput__StyledMaskedInputContainer-sc-99vkfa-1 jMpcQp"
        >
          <div
            class="StyledMaskedInput__StyledIcon-sc-99vkfa-2 bpNQXb"
          >
            <svg
              aria-label="Calendar"
              class="StyledIcon-ofa7kd-0 jaReTX"
              viewBox="0 0 24 24"
            >
              <path
                d="M2,5 L22,5 L22,22 L2,22 L2,5 Z M18,5 L18,1 M6,5 L6,1 M2,10 L22,10"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </div>
          <input
            autocomplete="off"
            class="StyledMaskedInput-sc-99vkfa-0 cLTyQO"
            id="dob"
            placeholder="yyyy-mm-dd"
            value=""
          />
        </div>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 kTuWTg"
      >
        You can set a cool value
      </span>
    </div>
  </div>
</div>
`;
